# law-hub-legal-system

./: .env.example  .gitignore  README.md  architecture.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260311_0001_initial.py  20260311_0002_operational_cases.py
apps/api/app/: main.py  seed.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: alerts.py  audit.py  auth.py  dashboard.py  entities.py  events.py  executions.py  health.py  imports.py  matches.py  operations.py  settings.py  users.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: entities.py
apps/api/app/schemas/: common.py
apps/api/app/services/: audit.py  monitoring.py  operations.py
apps/api/app/services/ai/: extraction.py  prompt_templates.py
apps/api/app/services/exports/: reporting.py
apps/api/app/services/integrations/: escavador.py
apps/api/app/services/matching/: engine.py
apps/api/app/services/notifications/: service.py
apps/api/app/services/scheduler/: manager.py
apps/api/app/utils/: text.py
apps/api/tests/: test_matching.py  test_operations.py  test_text.py
apps/web/: Dockerfile  eslint.config.mjs  next.config.mjs  package.json  tailwind.config.ts
docs/: source-lineage.md
docs/source-docs/: architecture.md
legacy/law-hub-client-src/: App.jsx  api.js  date.js  index.css
legacy/law-hub-server/: date-utils.js  date-utils.test.js  index.js  outreach-utils.js  outreach-utils.test.js  security.js
(+29 files in other folders)
